--- a/requirements.txt
+++ b/requirements.txt
@@ -21,9 +21,12 @@ mistune==0.8.4
 nbconvert==5.6.1
 nbformat==5.0.6
 notebook==6.0.3
+numpy==1.18.4
 packaging==20.4
+pandas==1.0.3
 pandocfilters==1.4.2
 parso==0.7.0
+patsy==0.5.1
 pexpect==4.8.0
 pickleshare==0.7.5
 pkg-resources==0.0.0
@@ -35,12 +38,15 @@ Pygments==2.6.1
 pyparsing==2.4.7
 pyrsistent==0.16.0
 python-dateutil==2.8.1
+pytz==2020.1
 pyzmq==19.0.1
 qtconsole==4.7.4
 QtPy==1.9.0
 retrying==1.3.3
+scipy==1.4.1
 Send2Trash==1.5.0
 six==1.14.0
+statsmodels==0.11.1
 terminado==0.8.3
 testpath==0.4.4
 tornado==6.0.4
